--- a/src/apps/blog/templates/blog/index.html
+++ b/src/apps/blog/templates/blog/index.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 
 {% load pipeline %}
+{% load cache %}
 {% load text %}
 {% load i18n %}
 
@@ -39,17 +40,19 @@
     <div id="posts">
       {% for post in paginator.current_page %}
         <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-          <meta itemprop="author" content="{{ config.microdata_author }}">
-          <link itemprop="mainEntityOfPage" href="{{ post.get_absolute_url }}"/>
-          <meta itemprop="dateModified" content="{{ post.updated|date:"c" }}"/>
-          <div style="display:none;" itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
-            <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-              <img itemprop="url" itemprop="image" src="{{ config.microdata_publisher_logo.url }}"/>
-              <meta itemprop="width" content="{{ config.microdata_publisher_logo.width }}">
-              <meta itemprop="height" content="{{ config.microdata_publisher_logo.height }}">
+          {% cache 3600 post_microdata post.pk %}
+            <meta itemprop="author" content="{{ config.microdata_author }}">
+            <link itemprop="mainEntityOfPage" href="{{ post.get_absolute_url }}"/>
+            <meta itemprop="dateModified" content="{{ post.updated|date:"c" }}"/>
+            <div style="display:none;" itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
+              <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
+                <img itemprop="url" itemprop="image" src="{{ config.microdata_publisher_logo.url }}"/>
+                <meta itemprop="width" content="{{ config.microdata_publisher_logo.width }}">
+                <meta itemprop="height" content="{{ config.microdata_publisher_logo.height }}">
+              </div>
+              <meta itemprop="name" content="{{ config.microdata_author }}">
             </div>
-            <meta itemprop="name" content="{{ config.microdata_author }}">
-          </div>
+          {% endcache %}
 
           <div class="grid-block">
             <header>
