--- a/src/apps/blog/templates/blog/detail.html
+++ b/src/apps/blog/templates/blog/detail.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 
 {% load pipeline %}
+{% load cache %}
 {% load away %}
 {% load text %}
 
@@ -18,22 +19,24 @@
 {% block content %}
 
   <div id="blog-post" class="block" itemscope itemtype="http://schema.org/Article">
-    <meta itemprop="author" content="{{ config.microdata_author }}">
-    <link itemprop="mainEntityOfPage" href="{{ post.get_absolute_url }}"/>
-    <meta itemprop="dateModified" content="{{ post.updated|date:"c" }}"/>
-    <div style="display:none;" itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
-      <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-        <img itemprop="url" itemprop="image" src="{{ config.microdata_publisher_logo.url }}"/>
-        <meta itemprop="width" content="{{ config.microdata_publisher_logo.width }}">
-        <meta itemprop="height" content="{{ config.microdata_publisher_logo.height }}">
+    {% cache 3600 post_microdata post.pk %}
+      <meta itemprop="author" content="{{ config.microdata_author }}">
+      <link itemprop="mainEntityOfPage" href="{{ post.get_absolute_url }}"/>
+      <meta itemprop="dateModified" content="{{ post.updated|date:"c" }}"/>
+      <div style="display:none;" itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
+        <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
+          <img itemprop="url" itemprop="image" src="{{ config.microdata_publisher_logo.url }}"/>
+          <meta itemprop="width" content="{{ config.microdata_publisher_logo.width }}">
+          <meta itemprop="height" content="{{ config.microdata_publisher_logo.height }}">
+        </div>
+        <meta itemprop="name" content="{{ config.microdata_author }}">
       </div>
-      <meta itemprop="name" content="{{ config.microdata_author }}">
-    </div>
-    <div style="display: none" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
-      <link itemprop="url" href="{{ post.preview.normal.url }}"/>
-      <meta itemprop="width" content="{{ post.preview.normal.target_width }}"/>
-      <meta itemprop="height" content="{{ post.preview.normal.target_height }}"/>
-    </div>
+      <div style="display: none" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
+        <link itemprop="url" href="{{ post.preview.normal.url }}"/>
+        <meta itemprop="width" content="{{ post.preview.normal.target_width }}"/>
+        <meta itemprop="height" content="{{ post.preview.normal.target_height }}"/>
+      </div>
+    {% endcache %}
 
     <div class="grid-block">
       <time datetime="{{ post.date|date:"c" }}" class="date" itemprop="datePublished">
