--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -128,6 +128,7 @@
 
     .fluid-width-video-wrapper {
       display: inline-block;
+      vertical-align: top;
       @include backface-visibility(hidden);
     }
 
