--- a/src/static/scss/mixins/_columns.scss
+++ b/src/static/scss/mixins/_columns.scss
@@ -37,5 +37,5 @@
 @mixin column-break-inside($value) {
   -webkit-column-break-inside: $value;
   page-break-inside: $value;
-  break-inside: $value;
+  // break-inside: $value;  // bug in IE 10+
 }
