--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -20,7 +20,7 @@
 
   {# === SCRIPTS === #}
   {#  Асинхронная подгрузка CSS  #}
-  {#  {% include 'pipeline/load_css.html' %} #}
+  {% include 'pipeline/load_css.html' %}
 
   {# === STYLES === #}
   <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon"/>
