--- a/src/static/admin/scss/dl_login.scss
+++ b/src/static/admin/scss/dl_login.scss
@@ -30,6 +30,7 @@
     h1 {
       padding: 0;
       margin-bottom: 26px;
+      max-width: 280px;
       color: #2C3035;
       text-align: center;
       background: none;
