--- a/src/apps_common/ckeditor/static/ckeditor/admin/css/ckeditor.css
+++ b/src/apps_common/ckeditor/static/ckeditor/admin/css/ckeditor.css
@@ -48,3 +48,11 @@ blockquote {
     color: white;
     background-color: #2C2F35;
 }
+
+.no-margin {
+    margin-bottom: 0;
+}
+
+.no-margin + * {
+    margin-top: 0;
+}
