--- a/src/libs/popup_banner/templates/popup_banner/admin/help_include.html
+++ b/src/libs/popup_banner/templates/popup_banner/admin/help_include.html
@@ -8,7 +8,7 @@
 </style>
 
 <div class="alert alert-info">
-  <p>{% trans 'Examples' %}:</p>
+  <p>{% trans 'Regex Examples' %}:</p>
 
   <dl class="help">
     <dt>/</dt>
