--- a/src/libs/popup_banner/templates/popup_banner/admin/help_include.html
+++ b/src/libs/popup_banner/templates/popup_banner/admin/help_include.html
@@ -12,7 +12,7 @@
 
   <dl class="help">
     <dt>/</dt>
-    <dd>{% trans 'Only main page' %}</dd>
+    <dd>{% trans 'Only home page' %}</dd>
 
     <dt>/*</dt>
     <dd>{% trans 'All pages' %}</dd>
