--- a/src/apps/contacts/templates/contacts/index.html
+++ b/src/apps/contacts/templates/contacts/index.html
@@ -7,12 +7,12 @@
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'contacts_page' %}
+  {% stylesheet 'contacts' %}
 {% endblock static_head %}
 
 {% block static_js %}
   {{ block.super }}
-  {% javascript 'contacts_page' %}
+  {% javascript 'contacts' %}
 {% endblock static_js %}
 
 
