--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -6,12 +6,12 @@
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'main_page' %}
+  {% stylesheet 'main' %}
 {% endblock static_head %}
 
 {% block static_js %}
   {{ block.super }}
-  {% javascript 'main_page' %}
+  {% javascript 'main' %}
 {% endblock static_js %}
 
 
