--- a/src/apps/blog/templates/blog/detail.html
+++ b/src/apps/blog/templates/blog/detail.html
@@ -7,12 +7,12 @@
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'blog_detail_page' %}
+  {% stylesheet 'blog_detail' %}
 {% endblock static_head %}
 
 {% block static_js %}
   {{ block.super }}
-  {% javascript 'blog_detail_page' %}
+  {% javascript 'blog_detail' %}
 {% endblock static_js %}
 
 
