--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -5,7 +5,7 @@
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'error_page' %}
+  {% stylesheet 'error' %}
 {% endblock static_head %}
 
 
