--- a/src/apps/contacts/templates/contacts/index.html
+++ b/src/apps/contacts/templates/contacts/index.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %}
 
 {% load attachable_blocks %}
+{% load pipeline_plus %}
 {% load form_helper %}
-{% load pipeline %}
 {% load i18n %}
 
 {% block static_head %}
