--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %}
 
 {% load attachable_blocks %}
+{% load pipeline_plus %}
 {% load staticfiles %}
-{% load pipeline %}
 
 {% block static_head %}
   {{ block.super }}
