--- a/src/apps_common/sitemap/templates/sitemap/index.html
+++ b/src/apps_common/sitemap/templates/sitemap/index.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
-{% load pipeline %}
+{% load pipeline_plus %}
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'sitemap_page' %}
+  {% stylesheet 'sitemap' %}
 {% endblock static_head %}
 
 
