--- a/src/templates/admin/base.html
+++ b/src/templates/admin/base.html
@@ -4,10 +4,10 @@
 {# custom footer #}
 {# hide time #}
 
+{% load pipeline_plus %}
 {% load admin_static %}
 {% load suit_tags %}
 {% load url from suit_compat %}
-{% load pipeline %}
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
 <head>
