--- a/src/libs/pipeline/templates/pipeline/localstorage_css.html
+++ b/src/libs/pipeline/templates/pipeline/localstorage_css.html
@@ -2,5 +2,5 @@
   window.loadLocalStorageCSS('{{ url }}', '{{ url }}?_={{ modified }}');
 </script>
 <noscript>
-  <link href="{{ url }}" rel="stylesheet" type="{{ type }}" {% if media %}media="{{ media }}"{% endif %} {% if title %}title="{{ title|default:"all" }}"{% endif %} {% if charset %}charset="{{ charset }}"{% endif %}/>
+  <link href="{{ url }}?_={{ modified }}" rel="stylesheet" type="{{ type }}" {% if media %}media="{{ media }}"{% endif %} {% if title %}title="{{ title|default:"all" }}"{% endif %} {% if charset %}charset="{{ charset }}"{% endif %}/>
 </noscript>
