--- a/src/apps_common/facebook_banner/static/facebook_banner/scss/facebook_banner.scss
+++ b/src/apps_common/facebook_banner/static/facebook_banner/scss/facebook_banner.scss
@@ -93,7 +93,7 @@ $facebook_blue: #3A66A5;
   }
 
   .button-window {
-    padding: 30px 15px 0px 15px;
-    height: 60px;
+    padding: 30px 15px;
+    min-height: 30px;
   }
 }
