--- a/src/apps_common/seo/templates/seo/admin/robots_include.html
+++ b/src/apps_common/seo/templates/seo/admin/robots_include.html
@@ -8,5 +8,6 @@ Host: www.mywebsite.com
 Sitemap: http://www.mywebsite.com/sitemap.xml
 Disallow: /blocks/
 Disallow: /ajax_cache/
+Disallow: /*/ajax/
 </pre>
 </div>
