--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -23,11 +23,16 @@
   {% include 'pipeline/script.html' %}
 
   {# === STYLES === #}
-  <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon"/>
-  <link rel="apple-touch-icon-precomposed" sizes="32x32" href="{% static 'img/favicon.png' %}">
+  {% if request.seo.canonical %}
+    <link rel="canonical" href="{{ request.seo.canonical }}">
+  {% endif %}
+
   {% for domain in MEDIA_URLS %}
     <link rel="dns-prefetch" href="{{ domain }}">
   {% endfor %}
+
+  <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon"/>
+  <link rel="apple-touch-icon-precomposed" sizes="32x32" href="{% static 'img/favicon.png' %}">
   {% stylesheet 'core' %}
 
   {% block static_head %}{% endblock static_head %}
