--- a/src/libs/opengraph/templates/opengraph/opengraph.html
+++ b/src/libs/opengraph/templates/opengraph/opengraph.html
@@ -1,3 +1,3 @@
-{% for og_key, og_value in params.items %}
+{% for og_key, og_value in data.items %}
   <meta property="{{ og_key }}" content="{{ og_value }}">
 {% endfor %}
