--- a/src/libs/opengraph/templates/opengraph/twitter_card.html
+++ b/src/libs/opengraph/templates/opengraph/twitter_card.html
@@ -1,3 +1,3 @@
-{% for tw_key, tw_value in params.items %}
+{% for tw_key, tw_value in data.items %}
   <meta name="twitter:{{ tw_key }}" content="{{ tw_value }}">
 {% endfor %}
