--- a/src/apps_common/social_buttons/templates/social_buttons/button.html
+++ b/src/apps_common/social_buttons/templates/social_buttons/button.html
@@ -1,1 +1,1 @@
-<a href="{{ share_url }}" class="social-button social-{{ provider }}" target="_blank" rel="nofollow">{{ text|default:'' }}</a>
+<a href="{{ share_url }}" class="social-button social-{{ provider }}" target="_blank">{{ text|default:'' }}</a>
