--- a/src/apps/blog/templates/blog/detail.html
+++ b/src/apps/blog/templates/blog/detail.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 
+{% load social_buttons %}
 {% load pipeline_plus %}
 {% load cache %}
 {% load away %}
@@ -53,6 +54,15 @@
 
       <div class="text text-styles" itemprop="articleBody">
         {% away post.text|typograf %}
+      </div>
+
+      <div class="social-buttons no-counter">
+        {% social_button 'vk' %}
+        {% social_button 'fb' %}
+        {% social_button 'tw' %}
+        {% social_button 'gp' %}
+        {% social_button 'li' %}
+        {% social_button 'pn' %}
       </div>
     </div>
   </div>
