--- a/src/static/scss/slider/plugins/navigation.scss
+++ b/src/static/scss/slider/plugins/navigation.scss
@@ -23,7 +23,7 @@ $dot_active_color: rgba($white, 1);
 
 .slider-navigation {
   position: absolute;
-  padding: 14px 30px 0;
+  padding: 14px 30px 10px;
   width: 100%;
   left: 0;
   bottom: 0;
