social_buttons -> social_networks

--- a/src/apps/blog/templates/blog/detail.html
+++ b/src/apps/blog/templates/blog/detail.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% load social_buttons %}
+{% load social_networks %}
 {% load pipeline_plus %}
 {% load cache %}
 {% load away %}
