--- a/src/apps/blog/templates/blog/index.html
+++ b/src/apps/blog/templates/blog/index.html
@@ -62,7 +62,7 @@
 
               <h2 class="title title-h1">
                 <a href="{{ post.get_absolute_url }}">
-                  <span itemprop="headline">{{ post.title }}</span>
+                  <span itemprop="headline">{{ post.header }}</span>
                 </a>
               </h2>
             </header>
