--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -106,6 +106,11 @@ input[type=number] {
   background-position: 0px -72px;
 }
 
+.control-group .related-lookup,
+.inline-group .related-lookup {
+  background-position: -48px 0px;
+}
+
 .control-group .delete-related,
 .inline-group .delete-related {
   display: inline-block;
