--- a/src/apps_common/social_networks/static/social_networks/scss/social_buttons.scss
+++ b/src/apps_common/social_networks/static/social_networks/scss/social_buttons.scss
@@ -6,7 +6,7 @@
   width: 40px;
   height: 40px;
   cursor: pointer;
-  background: url(../img/social.png) no-repeat;
+  background: url(../img/buttons.png) no-repeat;
   @include fontsize_default;
   @include border_radius(45%);
 
