--- a/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
+++ b/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
@@ -55,6 +55,7 @@
 }
 
 .autopost-form textarea {
+    overflow: hidden;
     width: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
