--- a/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
+++ b/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
@@ -3,7 +3,16 @@
     padding-bottom: 0;
 }
 
-.ui-dialog.autopost-preloading:before {
+@keyframes social-opacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.ui-dialog.autopost-preload:before {
     content: '';
     position: absolute;
     left: 0;
@@ -11,24 +20,29 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    background: rgba(128, 128, 128, 0.6);
+    background: rgba(51, 51, 51, 0.5);
+    -webkit-animation: social-opacity 0.1s forwards linear;
+    -o-animation: social-opacity 0.1s forwards linear;
+    animation: social-opacity 0.1s forwards linear;
 }
 
-.ui-dialog.autopost-preloading:after {
-    content: 'Please wait...';
+.ui-dialog.autopost-preload:after {
+    content: '';
     position: absolute;
-    padding: 10px;
     left: 50%;
     top: 50%;
     z-index: 2;
-    color: white;
-    max-width: 75%;
-    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    background: url(../img/preloader.svg) no-repeat center;
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    -webkit-animation: social-opacity 0.1s forwards linear;
+    -o-animation: social-opacity 0.1s forwards linear;
+    animation: social-opacity 0.1s forwards linear;
 }
 
 .autopost-form .field {
@@ -47,11 +61,16 @@
 }
 
 .autopost-form ul label {
+    display: inline-block;
     font-weight: normal;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .autopost-form ul input {
-    margin: 0;
+    margin: 0 2px 0 0;
 }
 
 .autopost-form textarea {
