--- a/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
+++ b/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
@@ -1,8 +1,3 @@
-.ui-dialog .autopost-form {
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
-
 @keyframes social-opacity {
     0% {
         opacity: 0;
@@ -73,6 +68,7 @@
 
 .autopost-form textarea {
     overflow: hidden;
+    margin: 0;
     width: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
