--- a/src/static/scss/mixins/_linear_gradient.scss
+++ b/src/static/scss/mixins/_linear_gradient.scss
@@ -31,13 +31,13 @@
 }
 
 @mixin linear-gradient($direction, $color-stops...) {
-  background-image: nth(nth($color-stops, 1), 1);
+  background-color: nth(nth($color-stops, 1), 1);
   background-image: -webkit-linear-gradient(legacy-direction($direction), $color-stops);
   background-image: linear-gradient($direction, $color-stops);
 }
 
 @mixin repeating-linear-gradient($direction, $color-stops...) {
-  background-image: nth(nth($color-stops, 1), 1);
+  background-color: nth(nth($color-stops, 1), 1);
   background-image: -webkit-repeating-linear-gradient(legacy-direction($direction), $color-stops);
   background-image: repeating-linear-gradient($direction, $color-stops);
 }
